--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@ My name is David, I grew up near the leak of Konstanz. I completed 2 apprentices
 During the first semester I learned the basics of java from Nico. Now I'm trying to learn python , jango and html.
 </p>
 
-<p>So far one of my biggest problem is English : ) , but I know that and so I will learn it.
-</p>
+<p>So far one of my biggest problem is English : ) , but I know that and so I will learn it.</p>
+
+<p></p>
 
 <p></p>
 
