--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ David Octavio Schaltegger
 <p></p>
 
 <p>
-My name is David, I grew up near the leak of Konstanz. I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic. Now I'm studying environment and energy-engeneering[Study](https://www.zhaw.ch/de/engineering/studium/bachelorstudium/energie-und-umwelttechnik/) at the [ZHAW](https://www.zhaw.ch/en/university/) in Winterthur.
+My name is David, I grew up near the leak of Konstanz. I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic. Now I'm studying environment and energy-engeneering<a[Study](https://www.zhaw.ch/de/engineering/studium/bachelorstudium/energie-und-umwelttechnik/)> at the <a[ZHAW](https://www.zhaw.ch/en/university/)> in Winterthur.
 </p>
 
 <p>In my off time I make a lot of sports also I like cooking.</p>
