--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ David Octavio Schaltegger
 <p></p>
 
 <p>
-My name is David, I grew up near the leak of Konstanz. I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic. Now I'm studying environment and energy-engeneering<a(https://www.zhaw.ch/de/engineering/studium/bachelorstudium/energie-und-umwelttechnik/)> Study</a> at the <a (https://www.zhaw.ch/en/university/)> ZHAW </a> in Winterthur.
+My name is David, I grew up near the leak of Konstanz. I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic. Now I'm studying environment and energy-engeneering<a herf = (https://www.zhaw.ch/de/engineering/studium/bachelorstudium/energie-und-umwelttechnik/)> Study</a> at the <a herf = (https://www.zhaw.ch/en/university/)> ZHAW </a> in Winterthur.
 </p>
 
 <p>In my off time I make a lot of sports also I like cooking.</p>
