--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <p></p>
 
 <p></p>
-<B>David Octavio Schaltegger</B>
+<b>David Octavio Schaltegger</b>
 
 
 
@@ -30,7 +30,11 @@
 <p></p>
 
 <p>
-My name is David, I grew up near the leak of Konstanz. I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic. Now I'm studying environment and energy-engeneering<a herf = "https://www.zhaw.ch/de/engineering/studium/bachelorstudium/energie-und-umwelttechnik/"> Study</a> at the <a herf = "https://www.zhaw.ch/en/university/"> ZHAW </a> in Winterthur.
+My name is David, I grew up near the leak of Konstanz. 
+I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic. 
+Now I'm studying environment and energy-engeneering
+<a herf = "https://www.zhaw.ch/de/engineering/studium/bachelorstudium/energie-und-umwelttechnik"> Study</a>
+at the <a herf = "https://www.zhaw.ch/en/university"> ZHAW </a> in Winterthur.
 </p>
 
 <p>In my off time I make a lot of sports also I like cooking.</p>
@@ -41,7 +45,14 @@ During the first semester I learned the basics of java from Nico. Now I'm trying
 
 <p>So far one of my biggest problem is English : ) , but I know that and so I will learn it.</p>
 
-<p></p>
+<p>
+  <table>
+  <tr> html </tr>
+  <tr> git + github </tr>
+  <tr>phyton</tr>
+  </table>
+  
+</p>
 
 <p></p>
 
