--- a/phyton.html
+++ b/phyton.html
@@ -1,1 +1,42 @@
+ <head>
+    <meta charset="UTF-8">
+    <title>Octaviox.GitHub.io by octaviox</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+  </head>
+  <body>
+    <section class="page-header">
+      <h1 class="project-name">Octaviox.GitHub.io</h1>
+      <h2 class="project-tagline"></h2>
+    </section>
 
+    <section class="main-content">
+      <p><img src="https://github.com/octaviox/octaviox.github.io/blob/master/2016-03-23-214445.jpg?raw=true" alt="#me"></p>
+
+<p></p>
+
+<p></p>
+here some Comands from phyton witch i had learned until now
+
+
+
+
+<p></p>
+
+<p></p>
+
+
+
+      <footer class="site-footer">
+
+        <span class="site-footer-credits">Homepage <a href="https://octaviox.github.io">GitHub Page</a> or  <a href="https://github.com/jasonlong/cayman-theme">GIt Comands</a> by <a href="https://twitter.com/jasonlong">Jason Long</a>.</span>
+      </footer>
+
+    </section>
+
+  
+  </body>
+</html>
