--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@ During the first semester I learned the basics of java from Nico. Now I'm trying
 <p>So far one of my biggest problem is English : ) , but I know that and so I will learn it.</p>
 
 <p>
-  <table>
-  <tr> html </tr>
-  <tr> git + github </tr>
-  <tr>phyton</tr>
-  </table>
+ <a herf = "octavio.github.io/phyton.html> Phyton Comandos </a>"
   
 </p>
 
