--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 <p></p>
 
 <p></p>
-<b>David Octavio Schaltegger</b>
-
+David Octavio Schaltegger
 
 
 <p></p>
@@ -30,11 +29,7 @@
 <p></p>
 
 <p>
-My name is David, I grew up near the leak of Konstanz. 
-I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic. 
-Now I'm studying environment and energy-engeneering
-<a herf = "https://www.zhaw.ch/de/engineering/studium/bachelorstudium/energie-und-umwelttechnik"> Study</a>
-at the <a herf = "https://www.zhaw.ch/en/university"> ZHAW </a> in Winterthur.
+My name is David, I grew up near the leak of Konstanz. I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic. Now I'm studying environment and energy-engeneering   at the   in Winterthur.
 </p>
 
 <p>In my off time I make a lot of sports also I like cooking.</p>
@@ -45,10 +40,9 @@ During the first semester I learned the basics of java from Nico. Now I'm trying
 
 <p>So far one of my biggest problem is English : ) , but I know that and so I will learn it.</p>
 
-<p>
- <a herf = "octavio.github.io/phyton.html> Phyton Comandos </a>"
-  
-</p>
+<p> </p>
+
+<p></p>
 
 <p></p>
 
