--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ David Octavio Schaltegger
 <p></p>
 
 <p>
-My name is David, I grew up near the leak of Konstanz. I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic. Now I'm studying environment and energy-engeneering   at the   in Winterthur.
+My name is David, I grew up near the leak of Konstanz. I completed 2 apprenticeships one as a Bike-Mechanic and one as a Bisycle-Mechanic.<a herf = "http://www.scherrer-motos.ch/unternehmen/team.php"> Company</a> Now I'm studying environment and energy-engeneering <a herf = "https://www.zhaw.ch/de/engineering/studium/bachelorstudium/energie-und-umwelttechnik/">Eco</a>  at the <a herf = "https://www.zhaw.ch/de/hochschule/">ZHAW</a>  in Winterthur.
 </p>
 
 <p>In my off time I make a lot of sports also I like cooking.</p>
@@ -43,7 +43,7 @@ During the first semester I learned the basics of java from Nico. Now I'm trying
 <p> </p>
 
 <p></p>
-
+<a herf = "octaviox.github.io/Commands" > </a>
 <p></p>
 
       <footer class="site-footer">
